Adding RAG service tests and fixing errors based on execution results