@@ -1,5 +1,6 @@
 package com.uniovi.rag.service.query;
 
+import com.uniovi.rag.api.OllamaConnectivityChecker;
 import com.uniovi.rag.model.QueryResponse;
 import com.uniovi.rag.service.analyser.QueryAnalyser;
 import com.uniovi.rag.service.expand.QueryExpander;
@@ -8,6 +9,7 @@ import com.uniovi.rag.service.retriever.ContextRetriever;
 import org.json.JSONObject;
 import org.springframework.ai.document.Document;
 import org.springframework.ai.chat.client.ChatClient;
+import org.springframework.ai.ollama.api.OllamaOptions;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -17,23 +19,50 @@ public class SimpleQueryService implements QueryService {
 
     private static final String QUESTION_PLACEHOLDER = "__QUESTION__";
     private static final String CONTEXT_PLACEHOLDER = "__CONTEXT__";
-    protected static final String PROMPT_TEMPLATE = "You are a helpful assistant that answers questions based on retrieved documents from a meeting minutes database. Base your answer ONLY on the information provided in the context below. RULES: If the context is empty or does not contain enough information, clearly state that you cannot find the information. DO NOT invent, guess, or make up information. NEVER invent names, dates, places, actas, or any other information not explicitly in the context. Answer in the SAME LANGUAGE as the user's question. Be concise. Do not repeat the question. Question: " + QUESTION_PLACEHOLDER + " Context: " + CONTEXT_PLACEHOLDER + " Provide your direct answer now:";
+    protected static final String PROMPT_TEMPLATE = "You are a helpful assistant. Retrieved meeting minutes fragments are in the context when available. PRIORITY: answer the user's question. If the question is general or the context does not help, answer from general knowledge in the user's language. If the question is about the documents and the context is relevant, base factual claims on the context only; never invent acta-specific facts. Context empty or irrelevant: still answer the question when possible. Question: " + QUESTION_PLACEHOLDER + " Context: " + CONTEXT_PLACEHOLDER + " Provide your direct answer now:";
 
     protected final ChatClient chatClient;
     protected final QueryExpander expander;
     protected final QueryAnalyser analyser;
     protected final ContextRetriever retriever;
+    private final OllamaConnectivityChecker ollamaConnectivityChecker;
 
-    public SimpleQueryService(QueryExpander expander, QueryAnalyser analyser, ContextRetriever retriever, ChatClient chatClient) {
+    private static final ThreadLocal<String> REQUEST_CHAT_MODEL = new ThreadLocal<>();
+
+    public SimpleQueryService(QueryExpander expander, QueryAnalyser analyser, ContextRetriever retriever, ChatClient chatClient,
+                              OllamaConnectivityChecker ollamaConnectivityChecker) {
         this.chatClient = chatClient;
         this.expander = expander;
         this.analyser = analyser;
         this.retriever = retriever;
+        this.ollamaConnectivityChecker = ollamaConnectivityChecker;
+    }
+
+    private ChatClient.ChatClientRequestSpec chatRequestSpec() {
+        ChatClient.ChatClientRequestSpec spec = chatClient.prompt();
+        String m = REQUEST_CHAT_MODEL.get();
+        if (m != null && !m.isBlank()) {
+            spec = spec.options(OllamaOptions.builder().model(m.trim()).build());
+        }
+        return spec;
+    }
+
+    private String answerWithoutRetrievedContext(String question) {
+        String prompt = String.format("""
+            The user asked (in any language): "%s"
+            
+            No document text was retrieved from the vector store (empty or no matches).
+            
+            Answer the question helpfully in the EXACT SAME LANGUAGE as the question,
+            using general knowledge where appropriate.
+            Do not repeat the question verbatim.
+            """, question != null ? question : "");
+        return askQueryToLlama(prompt);
     }
 
     protected String askQueryToLlama(String query) {
         try {
-            String content = chatClient.prompt().user(query).call().content();
+            String content = chatRequestSpec().user(query).call().content();
             return content != null ? content : "";
         } catch (Exception e) {
             log().warn("ChatClient call failed: {}", e.getMessage());
@@ -47,10 +76,16 @@ public class SimpleQueryService implements QueryService {
     }
 
     @Override
-    public QueryResponse generateResponse(String question) {
-        if (question == null || question.trim().isEmpty()) {
-            throw new IllegalArgumentException("La pregunta no puede ser nula, vacia o solo espacios en blanco.");
-        }
+    public QueryResponse generateResponse(String question, String chatModel) {
+        try {
+            if (chatModel != null && !chatModel.isBlank()) {
+                REQUEST_CHAT_MODEL.set(chatModel.trim());
+            }
+            if (question == null || question.trim().isEmpty()) {
+                throw new IllegalArgumentException("La pregunta no puede ser nula, vacia o solo espacios en blanco.");
+            }
+
+            ollamaConnectivityChecker.prepareForQuery(chatModel);
 
         String expandedQuery = expander.expand(question);
 
@@ -65,7 +100,8 @@ public class SimpleQueryService implements QueryService {
         String context = retriever.createContext(docs, expandedQuery, nerEntities);
 
         if (context == null || context.trim().isEmpty()) {
-            return QueryResponse.fromLLM("No relevant information was found in the available documents to answer this question.");
+            String direct = answerWithoutRetrievedContext(question);
+            return QueryResponse.fromLLM(direct != null ? direct : "I could not generate a response. Please try again.");
         }
 
         String template = PROMPT_TEMPLATE
@@ -79,6 +115,9 @@ public class SimpleQueryService implements QueryService {
         log().info("-----------------------------------------------------------------------------");
 
         return QueryResponse.fromLLM(askQueryToLlama(template));
+        } finally {
+            REQUEST_CHAT_MODEL.remove();
+        }
     }
 
 }
